[tool.poetry]
name = "plants-buro"
version = "0.1.0"
description = "Telegram-bot for managing your home plants"
authors = ["Anna Vasileva <vasilyeva1510@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
fastapi = "^0.70.0"
sqlmodel = "^0.0.4"
uvicorn = "^0.15.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
isort = "^5.10.0"
black = "^21.10b0"
flake8 = "^4.0.1"
mypy = "^0.910"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
filter_files = true
known_first_party = ["plants-buro"]
known_third_party = [
    "fastapi",
    "loguru",
    "pydantic",
    "pytest",
    "requests",
    "starlette",
    "starlette_context",
    "uvicorn"
]

[tool.black]
line-length = 100
target_version = ["py39"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
